--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class="text-center text-primary">
         Curriculo
     </h1>
-    <h2 class="text=end text-danger pd-3">
+    <h2 class="text-end text-danger pd-3">
         Pedro Luan da Silva Vilela
     </h2>
     
